--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -19,6 +22,12 @@
     ],
     "*.{json,md,yaml}": [
       "prettier --write"
+    ],
+    "**/*.test.{js,jsx,ts,tsx}": [
+      "jest --bail --findRelatedTests"
+    ],
+    "**/*.spec.{js,jsx,ts,tsx}": [
+      "jest --bail --findRelatedTests"
     ]
   },
   "dependencies": {
@@ -52,6 +61,9 @@
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
@@ -63,6 +75,8 @@
     "eslint-plugin-react-hooks": "^6.1.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.1.7",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.12",
     "lint-staged": "^16.2.3",
     "prettier": "^3.6.2",
     "typescript": "~5.9.2"
