--- a/package.json
+++ b/package.json
@@ -3,17 +3,37 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "node scripts/profile-selector.js start --dev-client",
+    "start:dev": "KEYSFILE=keys.development.json expo start --dev-client",
+    "start:staging": "KEYSFILE=keys.staging.json expo start --dev-client",
+    "start:production": "KEYSFILE=keys.production.json expo start --dev-client",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
+    "android": "node scripts/profile-selector.js android",
+    "android:dev": "KEYSFILE=keys.development.json expo run:android",
+    "android:staging": "KEYSFILE=keys.staging.json expo run:android",
+    "android:production": "KEYSFILE=keys.production.json expo run:android",
+    "ios": "node scripts/profile-selector.js ios",
+    "ios:dev": "KEYSFILE=keys.development.json expo run:ios",
+    "ios:staging": "KEYSFILE=keys.staging.json expo run:ios",
+    "ios:production": "KEYSFILE=keys.production.json expo run:ios",
     "web": "expo start --web",
     "prepare": "husky",
     "lint": "expo lint",
-    "format": "eslint --fix . && prettier --write . --ignore-path .gitignore"
+    "format": "eslint --fix . && prettier --write . --ignore-path .gitignore",
+    "env": "node scripts/env-manager.js",
+    "env:encrypt": "node scripts/env-manager.js encrypt",
+    "env:list": "node scripts/env-manager.js list",
+    "env:status": "node scripts/env-manager.js status",
+    "env:setup": "cp keys.example.json keys.development.json",
+    "env:verify": "node scripts/verify-env.js",
+    "prebuild": "node scripts/profile-selector.js prebuild --clean",
+    "prebuild:clean": "expo prebuild --clean",
+    "prebuild:dev": "KEYSFILE=keys.development.json expo prebuild --clean",
+    "prebuild:staging": "KEYSFILE=keys.staging.json expo prebuild --clean",
+    "prebuild:production": "KEYSFILE=keys.production.json expo prebuild --clean"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -54,6 +74,7 @@
     "react-i18next": "^16.0.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-keys": "^0.7.13",
     "react-native-mmkv": "^3.3.3",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
