feat: implement comprehensive theme system with react-native-unistyles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
       "@/assets/*": ["./assets/*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "jest.config.js"]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "jest.config.js", "babel.config.js"]
 }
