--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-boilerplate",
-  "main": "expo-router/entry",
+  "main": "index.ts",
   "version": "1.0.0",
   "scripts": {
     "start": "node scripts/profile-selector.js start --dev-client",
@@ -69,16 +69,20 @@
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.8",
     "i18next": "^25.5.3",
+    "lodash.get": "^4.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "^16.0.0",
     "react-native": "0.81.4",
+    "react-native-edge-to-edge": "^1.7.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keys": "^0.7.13",
     "react-native-mmkv": "^3.3.3",
+    "react-native-nitro-modules": "^0.31.2",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-unistyles": "^3.0.16",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "zustand": "^5.0.8"
@@ -87,6 +91,7 @@
     "@testing-library/jest-native": "^5.4.3",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^30.0.0",
+    "@types/lodash.get": "^4.4.2",
     "@types/react": "~19.1.0",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
