--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     ]
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -82,6 +81,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.14.0",
     "react-native-unistyles": "^3.0.16",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
