--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ios:staging": "KEYSFILE=keys.staging.json expo run:ios",
     "ios:production": "KEYSFILE=keys.production.json expo run:ios",
     "web": "expo start --web",
+    "postinstall": "patch-package",
     "prepare": "husky",
     "lint": "expo lint",
     "format": "eslint --fix . && prettier --write . --ignore-path .gitignore",
@@ -51,10 +52,15 @@
     ]
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^5.2.6",
+    "@hookform/resolvers": "^5.2.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@tanstack/react-query": "^5.90.5",
+    "dayjs": "^1.11.19",
     "expo": "~54.0.12",
+    "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -71,13 +77,18 @@
     "lodash.get": "^4.4.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.65.0",
     "react-i18next": "^16.0.0",
     "react-native": "0.81.4",
     "react-native-edge-to-edge": "^1.7.0",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-keyboard-controller": "^1.19.3",
     "react-native-keys": "^0.7.13",
     "react-native-mmkv": "^3.3.3",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-nitro-modules": "^0.31.2",
+    "react-native-popover-view": "^6.1.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -85,6 +96,7 @@
     "react-native-unistyles": "^3.0.16",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
+    "yup": "^1.7.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
@@ -107,6 +119,8 @@
     "jest": "^30.2.0",
     "jest-expo": "^54.0.12",
     "lint-staged": "^16.2.3",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   },
